--- a/Tyuiu.KarpovAA.Sprint6.Task7.V2/FormAbout.resx
+++ b/Tyuiu.KarpovAA.Sprint6.Task7.V2/FormAbout.resx
@@ -117,4 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label_KAA.Text" xml:space="preserve">
+    <value>Разработчик: Карпов Андрей Андреевич
+Группа: ИИПб-23-1
+
+Программа разработана в рамках изучения языка C#
+
+Тюменский индустриальный университет (с) 2023
+Высшая школа цифровых технологий (с) 2023
+
+Внутринне имя Tyuiu.KarpovAA.Sprint6.Task7.V2
+</value>
+  </data>
 </root>
